<resources>
    <string name="app_name">Hitung Duit</string>
    <string name="home">HOME</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="settings">SETTINGS</string>
    <string name="wallet">WALLET</string>
    <string name="expense">EXPENSE</string>
    <string name="history">HISTORY</string>
    <string name="add_expense">add expense</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="duit">Duit</string>
    <string name="tanggal">Tanggal</string>
    <string name="tulis_deskripsi">Tulis deskripsi</string>
    <string name="save_wallet">Save Wallet</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="flag">Flag</string>
    <string name="display_header">Display</string>

    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>
</resources>